Fix: css overflow for list

--- a/src/pages/ConfigList.css
+++ b/src/pages/ConfigList.css
@@ -1,6 +1,6 @@
 .list-wrapper {
   display: flex;
-  overflow-y: scroll;
+  overflow: hi;
 }
 
 .config-list {
